plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.143'
}

version = project.mod_version
group = project.group

base {
    archivesName = project.name
}

tasks.named('jar') {
    archiveFileName = "${project.name}-${project.version}-1.20.1neo.jar"
}

java {
    withSourcesJar()
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

sourceSets {
    main {
        java {
            // Minecraft 26.2 render-state implementations. The 1.21.1 port uses
            // the retained immediate-mode renderers under client/render/entity.
            exclude 'com/invasion/client/render/*.java'
            exclude 'com/invasion/mixin/AgeableMobRendererAccessor.java'
        }
    }
}

repositories {
    maven { name = 'JEI'; url = 'https://maven.blamejared.com' }
}

legacyForge {
    enable {
        neoForgeVersion = "${project.minecraft_version}-${project.neo_version}"
    }

    runs {
        client {
            client()
        }
        server {
            server()
            programArgument '--nogui'
        }
        configureEach {
            logLevel = org.slf4j.event.Level.INFO
        }
    }

    mods {
        invmod {
            sourceSet sourceSets.main
        }
    }
}

dependencies {
    compileOnly "mezz.jei:jei-${project.minecraft_version}-forge-api:${project.jei_version}"
}

processResources {
    inputs.properties(
            version: project.version,
            minecraftVersion: project.minecraft_version,
            neoVersion: project.neo_version)

    filesMatching('META-INF/mods.toml') {
        expand(
                version: project.version,
                minecraftVersion: project.minecraft_version,
                neoVersion: project.neo_version)
    }

    from 'LICENSE'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 17
    options.compilerArgs += ['-Xmaxerrs', '5000']
}
